It's So Yoever and other fixes.
