# backend/internal/apidoc/schemas.go
@@ -48,7 +48,8 @@ var modelTypes = map[string]any{
 	"GeneratedNamedCard": model.GeneratedNamedCard{}, "GenerateSingleCardResponse": model.GenerateSingleCardResponse{},
 	"CardResponse": model.CardResponse{}, "BoardResponse": model.BoardResponse{},
 	"GameStateResponse": model.GameStateResponse{}, "DrawResult": model.DrawResult{},
-	"EndGameResponse": model.EndGameResponse{}, "PatternsResponse": model.PatternsResponse{},
+	"EndGameResponse": model.EndGameResponse{}, "YoeverResponse": model.YoeverResponse{},
+	"PatternsResponse": model.PatternsResponse{},
 	"CreatedPattern": model.CreatedPattern{}, "PatternCreateResponse": model.PatternCreateResponse{},
 	"CategoriesResponse": model.CategoriesResponse{}, "CategoryCreateResponse": model.CategoryCreateResponse{},
 	"PresetsResponse": model.PresetsResponse{}, "PresetCreateResponse": model.PresetCreateResponse{},
